--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -4,45 +4,42 @@
         <div class="swiper mySwiper">
             <div class="slider swiper-wrapper">
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-1@1x.png 1x, ./images/common/review-1@2x.png 2x" alt="Dmitry's photo"
+                    <img srcset="./images/common/dima@1x.jpg 1x, ./images/common/dima@2x.jpg 2x" alt="Dmitry's photo"
                             class="reviews__photo">
                        <div class="review__thumb">
-                           <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                        congue. Lorem ipsum primis in nibh vel risus.</p>
+                           <p class="review__text">The way site navigation designed is extremely convenient. The using experience is extremely pleasant.Just a look at this ice cream makes me want a whole lot of it. The way it is served is incredible.</p>
                        </div>   
                        <div class="reviews-dots">
                         <span></span>
                        </div>
-                       <p class="reviwers-data">Dmitry, Los Angeles</p>                 
+                       <p class="reviwers-data">Dmitriy Belousov, Kyiv</p>                 
                 </div>
                 <div class="slider-item swiper-slide">
-                   <img srcset="./images/common/review-2@1x.png 1x, ./images/common/review-2@2x.png 2x" alt="Yuri's photo"
+                   <img srcset="./images/common/yurii@1x.jpg 1x, ./images/common/yurii@2x.jpg 2x" alt="Yuri's photo"
                         class="reviews__photo">
                         <div class="review__thumb">
-                            <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                accumsan
-                                congue. Lorem ipsum primis in nibh vel risus.</p>
+                            <p class="review__text">Simple interior, friendly service. Good selection of quality ice cream. I tried chocolate, very tasty, pleasant bitter
+                            chocolate taste. Also tried banana ice cream, good too. Recommend.</p>
                         </div>
                         <div class="reviews-dots">
                             <span class="review-dot"></span>
                         </div>
-                        <p class="reviwers-data">Yurii, Kyiv</p>
+                        <p class="reviwers-data">Yurii Krasnobokiy, Kyiv</p>
                     </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-3@1x.png 1x, ./images/common/review-3@2x.png 2x" alt="Ilona's photo"
+                    <img srcset="./images/common/ilona@1x.jpg 1x, ./images/common/ilona@2x.jpg 2x" alt="Ilona's photo"
                             class="reviews__photo">
                             <div class="review__thumb">
-                                <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                    accumsan
-                                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                                <p class="review__text">I love ice cream very much, so I always buy something new and try it. And of course, I have always had favorites for
+                                many years, and so it turns out with this ice cream. Ice cream is not only very tasty, but also of decent quality.</p>
                             </div>
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Ilona, Los Angeles</p>
+                            <p class="reviwers-data">Ilona Ursuliak, Kyiv</p>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-1@1x.png 1x, ./images/common/review-1@2x.png 2x" alt="Tatiana's photo"
+                    <img srcset="./images/common/tanya@1x.jpg 1x, ./images/common/tanya@2x.jpg 2x" alt="Tatiana's photo"
                             class="reviews__photo"><div class="review__thumb">
                                 <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
                                     accumsan
@@ -51,68 +48,63 @@
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Tatiana, Kyiv</p>
+                            <p class="reviwers-data">Tatiana Yarchenko, Kyiv</p>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-2@1x.png 1x, ./images/common/review-2@2x.png 2x" alt="Valery's photo"
+                    <img srcset="./images/common/valera@1x.jpg 1x, ./images/common/valera@2x.jpg 2x" alt="Valery's photo"
                             class="reviews__photo"><div class="review__thumb">
-                                <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                    accumsan
-                                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                                <p class="review__text">After trying the product of this cafe, I was satisfied. Ice cream melts gently
+                                on the tongue. Instead of incomprehensible jam, natural fruits and berries are felt. I will go here often and recommend
+                                to friends.</p>
                             </div>
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Valery, Los Angeles</p>
+                            <p class="reviwers-data">Valerii Surdolenko, Kyiv</p>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-3@1x.png 1x, ./images/common/review-3@2x.png 2x" alt="Vladislav`s photo"
+                    <img srcset="./images/common/vlad@1x.jpg 1x, ./images/common/vlad@2x.jpg 2x" alt="Vladislav`s photo"
                             class="reviews__photo"><div class="review__thumb">
-                                <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                    accumsan
-                                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                                <p class="review__text">This is the best ice cream I have ever tried. The best value for money. Pleased with a large selection of flavors. There
+                                are promotions and bonus programs. Nice atmosphere. Recommend.</p>
                             </div>
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Vladislav, Los Angeles</p>
+                            <p class="reviwers-data">Vladyslav Ponomarov, Kyiv</p>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-1@1x.png 1x, ./images/common/review-1@2x.png 2x" alt="Anna's photo"
+                    <img srcset="./images/common/anna@1x.jpg 1x, ./images/common/anna@2x.jpg 2x" alt="Anna's photo"
                             class="reviews__photo"><div class="review__thumb">
-                                <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                    accumsan
-                                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                                <p class="review__text">It is one of the best places for spending time in hot days and eating ice cream. There are many interesting tastes and
+                                flavors, which you will remember for a long time. Highly recommend this cafe.</p>
                             </div>
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Anna, Los Angeles</p>
+                            <p class="reviwers-data">Anna Datsiuk, Kyiv</p>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-2@1x.png 1x, ./images/common/review-2@2x.png 2x" alt="Svetlana's photo"
+                    <img srcset="./images/common/sveta@1x.jpg 1x, ./images/common/sveta@2x.jpg 2x" alt="Svetlana's photo"
                             class="reviews__photo"><div class="review__thumb">
-                                <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                    accumsan
-                                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                                <p class="review__text">This product like all my family,especially in summer we cannot without ice cream! Everyone eat two packs when it’s hot
+                                weather We like vanilla, mango, chocolate!</p>
                             </div>
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Svetlana, Kyiv</p>
+                            <p class="reviwers-data">Svetlana Savka, Kyiv</p>
                 </div>
                 <div class="slider-item swiper-slide">
-                    <img srcset="./images/common/review-3@1x.png 1x, ./images/common/review-3@2x.png 2x" 
+                    <img srcset="./images/common/lera@1x.jpg 1x, ./images/common/lera@2x.jpg 2x" 
                             alt="Valeriia's photo" class="reviews__photo">
                             <div class="review__thumb">
-                                <p class="review__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc,
-                                    accumsan
-                                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                                <p class="review__text">For me, in addition to excellent taste and reasonable price, it is important that the products are of high quality. Also, I cannot fail to note the pleasant service at the points of sale.</p>
                             </div>
                             <div class="reviews-dots">
                                 <span class="review-dot"></span>
                             </div>
-                            <p class="reviwers-data">Valeriia, Kyiv</p>
+                            <p class="reviwers-data">Valeriia Diachenko, Kyiv</p>
                 </div>
 
             </div>
