--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -33,6 +33,8 @@
 
 .reviews__photo {
   border-radius: 50%;
+  width: 85px;
+  height: 85px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 29px;
