--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -43,7 +43,7 @@
 
 
 <!-- <h1>Hows made? -->
-<div class="backdrop " data-modal>
+<div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-btn-close" data-modal-close>
              <svg class="read-more__close-icon" width="18" height="18">
