--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -7,7 +7,7 @@
                     <img srcset="./images/common/dima@1x.jpg 1x, ./images/common/dima@2x.jpg 2x" alt="Dmitry's photo"
                             class="reviews__photo">
                        <div class="review__thumb">
-                           <p class="review__text">The way site navigation designed is extremely convenient. The using experience is extremely pleasant.Just a look at this ice cream makes me want a whole lot of it. The way it is served is incredible.</p>
+                           <p class="review__text">The way site navigation designed is simple and convenient. The using experience is extremely pleasant.Just a look at this ice cream makes me want a whole lot of it. The way it is served is incredible.</p>
                        </div>   
                        <div class="reviews-dots">
                         <span></span>
