--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -7,6 +7,11 @@
 
   background-image: linear-gradient(to bottom, $bg-one 140px, $bg-two 127px, $bg-two 100%);
 }
+.contacts__list {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
+}
 .contacts__item {
   margin: 0 auto;
   padding: 43px 20px;
@@ -17,6 +22,12 @@
   border-radius: 24px;
   &:not(:last-child) {
     margin-bottom: 20px;
+  }
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 0;
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
   }
 }
 .contacts__place-name {
@@ -93,6 +104,10 @@
 // BUTTONS
 .contacts__wrapper-btn {
   margin-top: 54px;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    margin-left: 196px;
+  }
 }
 .contacts__btn {
   padding-left: 17px;
@@ -110,6 +125,10 @@
   line-height: 1.31;
   align-items: center;
   text-align: center;
+
+  @media screen and(min-width:$tablet) {
+    margin-right: 14.5px;
+  }
 }
 .contacts__btn-location {
   display: flex;
@@ -125,6 +144,9 @@
     width: 8px;
     height: 10px;
     margin-left: 8px;
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 0;
+    }
   }
 }
 .contacts__btn-franchise {
