--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 <!-- BUY NOW -->
-<div class="backdrop" data-modal>
+<div class="backdrop backdrop--is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal__btn--close" data-modal-close>
             <svg  width="18" height="18">
