--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -33,6 +33,11 @@
   border-radius: 10px;
   border: 1px solid $bg-accent;
   box-shadow: 5px 5px 5px -5px rgba(0, 0, 0, 0.62);
+  @media screen and (max-width: 767px) {
+    width: 300px;
+    padding-top: 110px;
+    transform: translate(-50%, 25%) scale(1);
+  }
 
   &__title {
     font-family: 'Titan One';
@@ -59,12 +64,18 @@
     top: -200px;
     content: '';
     display: block;
-    width: 330px;
+    width: 100%;
     height: 330px;
     background-image: url(../images/desktop/d-prod-cream@1x.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    @media screen and (max-width: 767px) {
+      width: 250px;
+      height: 250px;
+      top: -150px;
+      left: 25px;
+    }
   }
 }
 
@@ -75,6 +86,9 @@
   line-height: 176%;
   letter-spacing: 0.04em;
   color: $text-two;
+  @media screen and (max-width: 767px) {
+    font-size: 14px;
+  }
 
   &__item {
     display: block;
@@ -106,6 +120,9 @@
     font-weight: 400;
     color: $text-accent;
     font-size: 15px;
+    @media screen and (max-width: 767px) {
+      font-size: 13px;
+    }
   }
 }
 .checkbox {
@@ -117,15 +134,25 @@
   border: 2px solid $bg-one;
   border-radius: 2px;
   margin-right: 8px;
+  @media screen and (max-width: 767px) {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+  }
 }
 .terms__input {
   position: absolute;
   appearance: none;
+  display: none;
   &:checked + .checkbox {
     border: 0;
     background-image: url(../images/common/heart.svg);
     width: 20px;
     height: 20px;
+    @media screen and (max-width: 767px) {
+      width: 15px;
+      height: 15px;
+    }
   }
 }
 
