--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -33,11 +33,11 @@
             </button>
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li class="nav__item"><a data-goto=".hero-header" class="nav__link" href="#">Home</a></li>
-                        <li class="nav__item"><a data-goto=".footer"class="nav__link" href="#">About us</a></li>
-                        <li class="nav__item"><a data-goto=".about" class="nav__link" href="#">How it`s made</a></li>
-                        <li class="nav__item"><a data-goto=".products" class="nav__link" href="#">Our products</a></li>
-                        <li class="nav__item"><a data-goto=".contacts" class="nav__link" href="#">Contact</a></li>
+                        <li class="nav__item"><a data-goto=".hero-header" class="nav-link nav__link" href="#">Home</a></li>
+                        <li class="nav__item"><a data-goto=".footer"class="nav-link nav__link" href="#">About us</a></li>
+                        <li class="nav__item"><a data-goto=".about" class="nav-link nav__link" href="#">How it`s made</a></li>
+                        <li class="nav__item"><a data-goto=".products" class="nav-link nav__link" href="#">Our products</a></li>
+                        <li class="nav__item"><a data-goto=".contacts" class="nav-link nav__link" href="#">Contact</a></li>
                     </ul>
                 </nav>
         </div>
@@ -58,8 +58,8 @@
                 Made With</br>
                 <span class="hero__title--accent">Passion</span>
         </h1>
-        <a class="hero__link hero__link--red" data-goto=".products" href="">Products</a>
-        <a class="hero__link" data-goto=".about" href="">How it's made</a>
+        <a class="nav-link hero__link hero__link--red" data-goto=".products" href="">Products</a>
+        <a class="nav-link hero__link " data-goto=".about" href="">How it's made</a>
         <div class="hero__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
             <a href="" class="arrow">
