--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,19 +10,23 @@
                 </div>
                 <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
-                <button type="button" class="product-list__button">
+                <button type="button" class="product-list__button product__switch--a">
                     <img 
                     srcset="./images/common/prod-arrow@1x.png 1x, 
                     ./images/common/prod-arrow@2x.png 2x "
                     src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
                 </button>
-                <div class="overlay overlay-cream is-hidden">
-                    <button type="button" class="overlay__close"></button>
+                <div class="overlay overlay--a is-hidden">
                     <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
                         quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
                         explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
-                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.</p>
-                </div>
+                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.
+                    </p>
+                        <button type="button" class="overlay__close product__close--a">
+                            <img srcset="./images/common/prod-arrow@1x.png 1x, ./images/common/prod-arrow@2x.png 2x " 
+                            src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
+                        </button>
+                    </div>
             </li>
             <li class="product-list__item card-2">
                 <h3 class="product-list__title">ice coffee</h3>
@@ -31,19 +35,23 @@
                 </div>
                 <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
-                <button type="button" class="product-list__button">
+                <button type="button" class="product-list__button product__switch--b">
                     <img 
                     srcset="./images/common/prod-arrow@1x.png 1x, 
                     ./images/common/prod-arrow@2x.png 2x " 
                     src="./images/common/prod-arrow@1x.png" alt="кнопка"
                     width="40" height="40">
                 </button>
-                <div class="overlay overlay-coffee is-hidden">
-                    <button type="button" class="overlay__close"></button>
+                <div class="overlay overlay--b is-hidden">
                     <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
                         quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
                         explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
-                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.</p>
+                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.
+                    </p>
+                    <button type="button" class="overlay__close product__close--b">
+                        <img srcset="./images/common/prod-arrow@1x.png 1x, ./images/common/prod-arrow@2x.png 2x "
+                            src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
+                    </button>
                 </div>
             </li>
             <li class="product-list__item card-3">
@@ -53,19 +61,23 @@
                 </div>
                 <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
-                <button type="button" class="product-list__button">
+                <button type="button" class="product-list__button product__switch--c">
                 <img 
                 srcset="./images/common/prod-arrow@1x.png 1x, 
                 ./images/common/prod-arrow@2x.png 2x " 
                 src="./images/common/prod-arrow@1x.png" alt="кнопка"
                 width="40" height="40">
                 </button>
-                <div class="overlay overlay-shake is-hidden">
-                    <button type="button" class="overlay__close"></button>
+                <div class="overlay overlay--c is-hidden">
                     <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
                         quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
                         explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
-                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.</p>
+                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.
+                    </p>
+                    <button type="button" class="overlay__close product__close--c">
+                        <img srcset="./images/common/prod-arrow@1x.png 1x, ./images/common/prod-arrow@2x.png 2x "
+                            src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
+                    </button>
                 </div>
             </li>
         </ul>
