--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -40,6 +40,7 @@
   height: 485px;
   border-radius: 24px;
   padding-top: 161px;
+  padding-bottom: 20px;
   &:last-child {
     margin-bottom: 0px;
   }
@@ -58,6 +59,7 @@
     bottom: 346px;
     background-size: contain;
     background-repeat: no-repeat;
+    pointer-events: none;
   }
 }
 
@@ -103,8 +105,7 @@
 }
 
 .product-list__text {
-  padding-left: 41px;
-  padding-right: 39px;
+  padding: 0 40px;
   margin-bottom: 30px;
   font-weight: 700;
   line-height: calc(21 / 14);
@@ -117,43 +118,50 @@
   }
 }
 
+.overlay__text {
+  overflow: scroll;
+}
+
+.overlay.is-hidden {
+  transform: rotate3d(0, 1, 0, 180deg);
+  transition: transform $switch;
+}
 .overlay {
   position: absolute;
-  top: 0;
+  bottom: 35px;
   left: 0;
-  padding-top: 150px;
-  height: 100%;
+  height: 295px;
   border-radius: 24px;
-  overflow: auto;
+  overflow: scroll;
+  z-index: 1;
+  transform: rotate3d(0, 1, 0, 360deg);
+  transition: transform $switch;
   // transition: opacity $switch, visibility $switch;
 }
 
-.overlay-cream {
+.overlay--a {
   background-color: #ffb8ca;
 }
 
-.overlay-coffee {
+.overlay--b {
   background-color: #f0d1a5;
 }
 
-.overlay-shake {
+.overlay--c {
   background-color: #c2e297;
 }
 
 .overlay__close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+  // position: absolute;
+  // top: 20px;
+  // right: 20px;
   display: block;
-  // margin-left: auto;
-  // margin-top: -130px;
-  // margin-right: 20px;
-  // margin-bottom: 110px;
-  width: 16px;
-  height: 16px;
-  background-color: #ffffff;
-  border: transparent;
-  border-radius: 50%;
+  margin: 0 auto;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  padding: 0;
+  border: 0;
 }
 
 .is-hidden {
