hero-header complite

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -14,8 +14,8 @@
             <use href="./images/sprite.svg#burger" width="20" height="12"></use>
         </svg>
     </button>
-    <button class="mobile__btn mobile__btn--tablet btn" type="button"><span>Buy now</span>
-        <svg class="header__btn--arrow" width="14" height="14">
+    <button class="mobile__btn mobile__btn--tablet" type="button"><span>Buy now</span>
+        <svg class="mobile__btn--arrow" width="14" height="14">
             <use href="./images/sprite.svg#btn"></use>
         </svg>
     </button>
@@ -26,7 +26,7 @@
                     <use href="./images/sprite.svg#close" width="14" height="14"></use>
                 </svg>
             </button>
-            <button class="mobile__btn btn" type="button" data-modal-open ><span>Buy now</span>
+            <button class="mobile__btn" type="button" data-modal-open ><span>Buy now</span>
                 <svg class="mobile__btn--arrow" width="14" height="14">
                     <use href="./images/sprite.svg#btn"></use>
                 </svg>
