--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,3 +1,11 @@
+.header{
+   @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: center;
+    height: 50px;
+  }
+}
+
 .header__container {
   padding: 6px 0;
   display: flex;
@@ -5,6 +13,16 @@
   @media screen and (min-width: $tablet) {
     padding: 0;
   }
+   @media screen and (min-width: $desktop) {
+    margin-right: 110px;
+  }
+}
+
+.logo{
+    @media screen and (min-width: $desktop) {
+      margin-left: -35px;
+      margin-right: -35px;
+    }
 }
 
 .menu__open {
@@ -18,6 +36,9 @@
     margin-left: auto;
     z-index: 1;
   }
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
 }
 
 .menu__open__btn {
@@ -27,7 +48,8 @@
 }
 
 .mobile-menu {
-  z-index: 50;
+  z-index: 10;
+  @media screen and (max-width: 1199px){
   position: fixed;
   top: 0;
   left: 0;
@@ -39,7 +61,8 @@
   background-color: $bg-mobile;
   transform: translateX(-100%);
   transition: transform $switch;
-  @media screen and (min-width: $tablet) {
+  
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
     max-width: 254px;
     transform: translateX(-100%);
     transition: transform $switch;
@@ -48,8 +71,20 @@
   &--shown {
     transform: translateX(0%);
   }
-  @media screen and (min-width: $tablet) {
-    max-width: 254px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    position: fixed;
+    top: 38px;
+    margin-left: 13%;
+    max-height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row-reverse;
+    background-color: $bg-three;
+    border-radius: 22px;
+     
   }
 }
 
@@ -59,6 +94,9 @@
   right: 28px;
   background: transparent;
   border: none;
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
 }
 
 .menu__close__btn {
@@ -77,7 +115,7 @@
 
   font-weight: 700;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 1;
 
   border-radius: 22px;
   border: none;
@@ -90,6 +128,9 @@
     @media screen and (min-width: $tablet) {
       margin-left: 12px;
     }
+  }
+   @media screen and (min-width: $desktop) {
+    width: 159px;
   }
   &:hover,
   &:focus {
@@ -104,6 +145,20 @@
   font-weight: 700;
   line-height: 1.29;
   color: $text-two;
+  @media screen and (min-width: $desktop) {
+    margin: 0 110px 0 0;
+    font-size: 16px;
+  }
+}
+
+.nav__list {
+  @media screen and (min-width: $desktop) {
+    width: 541px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .nav__item {
@@ -122,6 +177,12 @@
   width: 209px;
   padding: 13px 0 11px 0;
   margin: 0 auto;
+   @media screen and (min-width: $desktop) {
+    width: auto;
+     &:first-child {
+      padding-left: 15px;
+    }
+  }
 }
 
 .mobile__btn--tablet {
