slider for tablet and desktop

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,5 @@
 <!--------------------Section Customers Reviews------------------->
-<section class="reviews__section">
+<section class="reviews__section" id="reviews">
 <div class="wrapper container">
         <div class="swiper mySwiper">
             <div class="slider swiper-wrapper">
