--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,13 +1,20 @@
 .gallery{
-    background-image: linear-gradient(
-        to bottom,
-        #FFF5F6 10%,
-        #fff 50%
-    );
     padding-bottom: 40px;
+    background: linear-gradient(to bottom, $bg-two 48px,
+    $bg-one 48px);
     @media screen and (min-width: 768px) {
         padding-bottom: 60px;
-}
+        background-image: linear-gradient(
+        to bottom,
+        $bg-two 107px,
+        $bg-one 107px
+    ); }
+@media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        to bottom,
+        $bg-two 171px,
+        $bg-one 171px);
+} 
 }
 
 .gallery__items{
