--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,5 @@
-.header{
-   @media screen and (min-width: $desktop) {
+.header {
+  @media screen and (min-width: $desktop) {
     display: flex;
     align-items: center;
     height: 50px;
@@ -13,16 +13,16 @@
   @media screen and (min-width: $tablet) {
     padding: 0;
   }
-   @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $desktop) {
     margin-right: 110px;
   }
 }
 
-.logo{
-    @media screen and (min-width: $desktop) {
-      margin-left: -35px;
-      margin-right: -35px;
-    }
+.logo {
+  @media screen and (min-width: $desktop) {
+    margin-left: -35px;
+    margin-right: -35px;
+  }
 }
 
 .menu__open {
@@ -49,34 +49,34 @@
 
 .mobile-menu {
   z-index: 10;
-  @media screen and (max-width: 1199px){
-  position: fixed;
-  top: 0;
-  left: 0;
+  @media screen and (max-width: 1199px) {
+    position: fixed;
+    top: 0;
+    left: 0;
 
-  width: 100vw;
-  height: 100vh;
-  padding: 60px 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 60px 0;
 
-  background-color: $bg-mobile;
-  transform: translateX(-100%);
-  transition: transform $switch;
-  
-  @media screen and (min-width: $tablet) and (max-width: 1199px) {
-    max-width: 254px;
+    background-color: $bg-mobile;
     transform: translateX(-100%);
     transition: transform $switch;
-  }
 
-  &--shown {
-    transform: translateX(0%);
-  }
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+      max-width: 254px;
+      transform: translateX(-100%);
+      transition: transform $switch;
+    }
+
+    &--shown {
+      transform: translateX(0%);
+    }
   }
 
   @media screen and (min-width: $desktop) {
     position: fixed;
     top: 38px;
-    margin-left: 13%;
+    margin-left: 14%;
     max-height: 44px;
     display: flex;
     align-items: center;
@@ -84,7 +84,6 @@
     flex-direction: row-reverse;
     background-color: $bg-three;
     border-radius: 22px;
-     
   }
 }
 
@@ -129,7 +128,7 @@
       margin-left: 12px;
     }
   }
-   @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $desktop) {
     width: 159px;
   }
   &:hover,
@@ -163,7 +162,7 @@
 
 .nav__item {
   @media screen and (max-width: 1199px) {
-    border-bottom: 1px solid #e18298;
+    border: 1px solid #e18298;
   }
   &:hover,
   &:focus {
@@ -177,9 +176,9 @@
   width: 209px;
   padding: 13px 0 11px 0;
   margin: 0 auto;
-   @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $desktop) {
     width: auto;
-     &:first-child {
+    &:first-child {
       padding-left: 15px;
     }
   }
