--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,13 +2,23 @@
   background-color: $bg-two;
   &__pre-title {
     text-align: left;
-    width: 232px;
     margin-bottom: 17px;
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 16px;
+    }
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 15px;
+    }
   }
   &__title {
     text-align: left;
-    width: 200px;
     margin-bottom: 43px;
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 0;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 474px;
+    }
   }
   &__rights {
     font-weight: 700;
@@ -22,18 +32,53 @@
     margin-right: auto;
     padding-top: 22px;
     padding-bottom: 25px;
+    @media screen and (min-width: $tablet) {
+      line-height: 1.86;
+      min-width: 276px;
+      padding-top: 29px;
+      padding-bottom: 18px;
+    }
+    @media screen and (min-width: $desktop) {
+      padding-top: 9px;
+      padding-bottom: 10px;
+    }
+  }
+  &__block {
+    width: 234px;
+    @media screen and (min-width: $tablet) {
+      width: 340px;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 474px;
+    }
+  }
+  &__flex {
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 43px;
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 91px;
+    }
+    @media screen and (min-width: $desktop) {
+      padding-bottom: 97px;
+    }
   }
 }
 
 .footer-social {
-  border-bottom: 1px solid #e1e1e1;
   &__text {
     font-weight: 700;
     font-size: 12px;
     line-height: 1.86;
     text-align: right;
     color: $text-one;
-    margin-bottom: 43px;
+    @media screen and (min-width: $tablet) {
+      font-size: 14px;
+    }
+    @media screen and (min-width: $desktop) {
+      font-size: 16px;
+    }
   }
   &__tel-text {
     font-weight: 700;
@@ -41,6 +86,12 @@
     line-height: 1.86;
     text-align: right;
     color: $text-accent;
+    @media screen and (min-width: $tablet) {
+      font-size: 14px;
+    }
+    @media screen and (min-width: $desktop) {
+      font-size: 16px;
+    }
   }
 }
 
@@ -50,6 +101,9 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 50px;
+  }
   &__link {
     width: 32px;
     height: 32px;
@@ -61,21 +115,28 @@
       border-radius: 50%;
       background-color: $bg-accent;
     }
+    @media screen and (min-width: $tablet) {
+      width: 34px;
+      height: 34px;
+    }
   }
   &__item:not(:last-child) {
-    margin-right: 24px;
+    margin-right: 28px;
+    @media screen and (min-width: $tablet) {
+      margin-right: 30px;
+    }
+    @media screen and (min-width: $desktop) {
+      margin-right: 24px;
+    }
   }
   &__icon {
     background-color: #fea5bb;
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    // &:hover,
-    // &:focus {
-    //   width: 32px;
-    //   height: 32px;
-    //   border-radius: 50%;
-    //   background-color: $bg-accent;
-    // }
+    @media screen and (min-width: $tablet) {
+      width: 34px;
+      height: 34px;
+    }
   }
 }
