bug-fix/products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,7 +17,7 @@
                     src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
                 </button>
                 <div class="overlay overlay--a is-hidden">
-                    <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
+                    <p class="overlay__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
                         quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
                         explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
                         saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.
@@ -43,7 +43,7 @@
                     width="40" height="40">
                 </button>
                 <div class="overlay overlay--b is-hidden">
-                    <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
+                    <p class="overlay__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
                         quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
                         explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
                         saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.
@@ -69,7 +69,7 @@
                 width="40" height="40">
                 </button>
                 <div class="overlay overlay--c is-hidden">
-                    <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
+                    <p class="overlay__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
                         quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
                         explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
                         saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.
