--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -14,7 +14,7 @@
             <use href="./images/sprite.svg#burger" width="20" height="12"></use>
         </svg>
     </button>
-    <button class="mobile__btn mobile__btn--tablet" type="button"><span>Buy now</span>
+    <button class="mobile__btn mobile__btn--tablet" type="button" data-modal-open-tablet><span>Buy now</span>
         <svg class="mobile__btn--arrow" width="14" height="14">
             <use href="./images/sprite.svg#btn"></use>
         </svg>
