--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -13,7 +13,8 @@
     transform: translate(-50%, 32%) scale(0.5);
     bottom: 0vh;
     left: 50%;
-    transition: opacity $switch, scale $switch;
+    opacity: 0;
+    transition: transform $switch, opacity $switch;
   }
   &--is-hidden {
     opacity: 0;
@@ -28,7 +29,7 @@
   left: 50%;
   width: 330px;
   padding: 140px 25px 25px 25px;
-  transition: opacity $switch, scale $switch;
+  transition: opacity $switch, transform $switch;
   background-color: #ffb8ca;
   transform: translate(-50%, 32%) scale(1);
   border-radius: 10px;
